--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <div id="root"></div>
     <script src="asset/jquery.min.js"></script>
     <script src="asset/query.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
